--- a/css/custom.css
+++ b/css/custom.css
@@ -92,6 +92,10 @@ footer {
   width: 100%;
 }
 
+/*.dadin-menu .page_item_has_children {
+  background: #e9e9e9;
+}*/
+
 .dadin-menu-2 li {
   list-style-type: none;
   padding: 0.3em 1em;
@@ -100,7 +104,7 @@ footer {
   width: 100%;
 }
 
-.dadin-menu .page_item:hover {
+.dadin-menu li:hover {
   cursor: pointer;
   background: #e7e7e7;
 }
