--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -268,7 +268,7 @@ th {
 }
 .glyphicon {
   position: relative;
-  top: 1px;
+  top: 5px;
   display: inline-block;
   font-family: 'Glyphicons Halflings';
   font-style: normal;
@@ -277,7 +277,7 @@ th {
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-};
+}
 .glyphicon-asterisk:before {
   content: "\002a";
 }
